chore: db 설정값 변경

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -1,3 +1,14 @@
 spring:
   application:
     name: community
+  docker:
+    compose:
+      file: backend/compose.yaml
+  datasource:
+    url: jdbc:postgresql://localhost:5432/community
+    username: postgres
+    password: postgres
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
