chore: readme, gitignore, action 업데이트 - chore 브랜치 일경우 테스트 코드 스킵

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ env:
 
 jobs:
   frontend-test:
+    if: ${{ !startsWith(github.head_ref, 'chore/') }}
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -26,6 +27,7 @@ jobs:
       - run: npm test
 
   backend-test:
+    if: ${{ !startsWith(github.head_ref, 'chore/') }}
     runs-on: ubuntu-latest
     services:
       postgres:
