chore: ci.yml 에서 PostgreSQL 설정값 제거및 ci 최적화 - db 오버라이드 방지 - 테스트시 로컬과 ci 환경에서 불일치 하는 이슈 해결 - ci 환경에서 gradle 매번 다운로드하던것 수정 -- 캐싱 처리 (7d || max 10Gmem Over)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,20 +29,6 @@ jobs:
   backend-test:
     if: ${{ !startsWith(github.head_ref, 'chore/') }}
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:latest
-        env:
-          POSTGRES_DB: community
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
     defaults:
       run:
         working-directory: backend
@@ -54,11 +40,5 @@ jobs:
         with:
           distribution: temurin
           java-version: 25
-          cache: gradle
-          cache-dependency-path: backend/build.gradle
-      - run: chmod +x gradlew
+      - uses: gradle/actions/setup-gradle@v4
       - run: ./gradlew test
-        env:
-          SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/community
-          SPRING_DATASOURCE_USERNAME: postgres
-          SPRING_DATASOURCE_PASSWORD: postgres
