--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -27,6 +27,8 @@ repositories {
 
 dependencies {
     implementation 'com.fasterxml.uuid:java-uuid-generator:5.2.0'
+    implementation 'org.springframework.boot:spring-boot-starter-batch'
+    implementation 'org.springframework.boot:spring-boot-starter-batch-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-webmvc'
