--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "unique-names-generator": "^4.7.1"
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
